Switch Arrays.asList calls to List.of